change colors filter to array colors
